autodev/logs/repair_context.txt
=== REPAIR INSTRUCTIONS ===

UAT Result: 0/6 tests passed
Failure categories: ['SERVICE_DOWN']

=== FAILED TESTS (what was expected vs what happened) ===

TEST: Backend startup
CATEGORY: SERVICE_DOWN
EXPECTED: "service running"
ACTUAL:   http://localhost:8000 not reachable after 60s

TEST: Frontend startup
CATEGORY: SERVICE_DOWN
EXPECTED: "service running"
ACTUAL:   http://localhost:5173 not reachable after 60s

TEST: GET /
CATEGORY: SERVICE_DOWN
EXPECTED: [200, 204]
ACTUAL:   <urlopen error [Errno 60] Operation timed out>

TEST: GET /health
CATEGORY: SERVICE_DOWN
EXPECTED: [200, 204]
ACTUAL:   <urlopen error [Errno 60] Operation timed out>

TEST: POST /upload/
CATEGORY: SERVICE_DOWN
EXPECTED: [200, 201, 202]
ACTUAL:   <urlopen error [Errno 60] Operation timed out>

TEST: Frontend GET /
CATEGORY: SERVICE_DOWN
EXPECTED: {"path": "/", "expect_status": 200, "expect_html_contains": ["<html", "</html"]}
ACTUAL:   <urlopen error [Errno 61] Connection refused>

=== SPECIFIC FIX GUIDANCE ===
• SERVICE_DOWN: Check imports in main.py, ensure all packages in requirements.txt are importable

=== FILES TO FIX (complete file content required) ===

FILE: backend/main.py
from fastapi import FastAPI, File, UploadFile
from fastapi.responses import JSONResponse
import os
from uuid import uuid4

app = FastAPI()

@app.get("/")
async def read_root():
    return {"message": "Welcome to the Audio Workstation API"}

@app.get("/health")
async def health_check():
    return {"status": "ok"}

@app.post("/upload/")
async def upload_file(file: UploadFile = File(...)):
    file_location = f"uploads/{uuid4()}-{file.filename}"
    with open(file_location, "wb+") as file_object:
        file_object.write(file.file.read())
    return JSONResponse(content={"url": file_location})

if __name__ == "__main__":
    import uvicorn
    uvicorn.run(app, host="0.0.0.0", port=8000)

=== Backend Runtime Log (last 40 lines) ===
Traceback (most recent call last):
  File "/usr/local/lib/python3.10/site-packages/uvicorn/main.py", line 369, in main
    sockets = bind_socket(app, host=host, port=port, reuse_port=reuse_port)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.10/site-packages/uvicorn/main.py", line 298, in bind_socket
    sock = config.bind_socket()
           ~~~~~~~~~~~~~~~~~~~~
  File "/usr/local/lib/python3.10/site-packages/uvicorn/config.py", line 64, in bind_socket
    sock.setsockopt(SOL_SOCKET, SO_REUSEADDR, self.reuse_port)
OSError: [Errno 93] Protocol not supported

This error is due to the operating system not supporting the SO_REUSEPORT socket option which is required by uvicorn when reuse_port=True. You can resolve this issue by setting the environment variable UVICORN_RELOAD=true before starting your application, or by changing the value of the reuse_port parameter to False in your uvicorn.run() call.


FILE: backend/requirements.txt
fastapi==0.95.1
uvicorn==0.20.0

=== Backend Runtime Log (last 40 lines) ===
    self._target(*self._args, **self._kwargs)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/wwkoon/.openclaw/workspace/mycoder/autodev/workspace/audio-workstation-using-react-web-audio/backend/.venv/lib/python3.14/site-packages/uvicorn/_subprocess.py", line 76, in subprocess_started
    target(sockets=sockets)
    ~~~~~~^^^^^^^^^^^^^^^^^
  File "/Users/wwkoon/.openclaw/workspace/mycoder/autodev/workspace/audio-workstation-using-react-web-audio/backend/.venv/lib/python3.14/site-packages/uvicorn/server.py", line 60, in run
    return asyncio.run(self.serve(sockets=sockets))
           ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/homebrew/Cellar/python@3.14/3.14.2/Frameworks/Python.framework/Versions/3.14/lib/python3.14/asyncio/runners.py", line 204, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "/opt/homebrew/Cellar/python@3.14/3.14.2/Frameworks/Python.framework/Versions/3.14/lib/python3.14/asyncio/runners.py", line 127, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "/opt/homebrew/Cellar/python@3.14/3.14.2/Frameworks/Python.framework/Versions/3.14/lib/python3.14/asyncio/base_events.py", line 719, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "/Users/wwkoon/.openclaw/workspace/mycoder/autodev/workspace/audio-workstation-using-react-web-audio/backend/.venv/lib/python3.14/site-packages/uvicorn/server.py", line 67, in serve
    config.load()
    ~~~~~~~~~~~^^
  File "/Users/wwkoon/.openclaw/workspace/mycoder/autodev/workspace/audio-workstation-using-react-web-audio/backend/.venv/lib/python3.14/site-packages/uvicorn/config.py", line 477, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/Users/wwkoon/.openclaw/workspace/mycoder/autodev/workspace/audio-workstation-using-react-web-audio/backend/.venv/lib/python3.14/site-packages/uvicorn/importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
  File "/opt/homebrew/Cellar/python@3.14/3.14.2/Frameworks/Python.framework/Versions/3.14/lib/python3.14/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1398, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1371, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1342, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 938, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 755, in exec_module
  File "<frozen importlib._bootstrap_external>", line 893, in get_code
  File "<frozen importlib._bootstrap_external>", line 823, in source_to_code
  File "<frozen importlib._bootstrap>", line 491, in _call_with_frames_removed
  File "/Users/wwkoon/.openclaw/workspace/mycoder/autodev/workspace/audio-workstation-using-react-web-audio/backend/main.py", line 27
    === Backend Runtime Log (last 40 lines) ===
    ^^
SyntaxError: invalid syntax

=== Frontend Runtime Log (last 40 lines) ===

> audio-workstation@1.0.0 start
> react-scripts start

sh: react-scripts: command not found

=== Previous Fix Attempts (do NOT repeat these) ===
--- Iteration 1: files changed ---
FILE: backend/main.py
--- Iteration 1: UAT result ---
Backend startup
Frontend startup
GET /
GET /health
POST /upload/
--- Iteration 2: files changed ---
(none)
--- Iteration 2: UAT result ---
Backend startup
Frontend startup
GET /
GET /health
POST /upload/
